Doc/force-app/main/default/objects/Order_Header__c/fields/Cloud_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Name__c</fullName>
    <label>Cloud Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>