Doc/force-app/main/default/objects/Order_Header__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>