Doc/force-app/main/default/objects/Order_Header__c/fields/Contract_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Special_Terms__c</fullName>
    <description>Special terms migrated from referenced contract</description>
    <label>Contract Special Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>