Doc/force-app/main/default/objects/Order_Header__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>This is the employee count from the account page.</description>
    <label>Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>