Doc/force-app/main/default/objects/Order_Header__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Platform Instance (unknown/mixed use)</fullName>
            </value>
            <value>
                <fullName>Platform Instance for IB</fullName>
            </value>
            <value>
                <fullName>Platform Instance for TB</fullName>
            </value>
            <value>
                <fullName>Platform Instance for WB</fullName>
            </value>
            <value>
                <fullName>TB License</fullName>
            </value>
            <value>
                <fullName>WB License</fullName>
            </value>
            <value>
                <fullName>Platform Instance for Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>