Doc/force-app/main/default/objects/Order_Header__c/fields/Non_Production_IB_Instance__c.field-meta.xml
<CustomField>
    <fullName>Non_Production_IB_Instance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this not the primary IB instance for IB?  I.e. is it a test or development or slave instance?</description>
    <label>Non-Production IB Instance</label>
    <type>Checkbox</type>
</CustomField>