Doc/force-app/main/default/objects/Order_Header__c/fields/Platform_Version__c.field-meta.xml
<CustomField>
    <fullName>Platform_Version__c</fullName>
    <label>Platform Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>