Doc/force-app/main/default/objects/Order_Header__c/fields/Product_Component__c.field-meta.xml
<CustomField>
    <fullName>Product_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Component</label>
    <referenceTo>Product_Component__c</referenceTo>
    <relationshipName>R00N50000001QqWfEAK</relationshipName>
    <type>Lookup</type>
</CustomField>