Doc/force-app/main/default/objects/Order_Header__c/fields/Production_IB_Instance__c.field-meta.xml
<CustomField>
    <fullName>Production_IB_Instance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the primary IB (for IB) instance?</description>
    <label>Production IB Instance</label>
    <type>Checkbox</type>
</CustomField>