Doc/force-app/main/default/objects/Order_Header__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Address (Deprecated)</label>
    <type>TextArea</type>
</CustomField>