Doc/force-app/main/default/objects/Order_Header__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>