Doc/force-app/main/default/objects/Order_Header__c/fields/View_Shipping_Label__c.field-meta.xml
<CustomField>
    <fullName>View_Shipping_Label__c</fullName>
    <description>Click to view the shipping label</description>
    <formula>IF( 
Shipping_Label_Attachment_ID__c &lt;&gt; &quot;&quot;, 
HYPERLINK(&quot;https://na3.salesforce.com/servlet/servlet.FileDownload?file=&quot;&amp;Shipping_Label_Attachment_ID__c, &quot;view&quot;),
 &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Shipping Label</label>
    <type>Text</type>
</CustomField>