Doc/force-app/main/default/objects/Order_Header__c/fields/VM_Activation_Code__c.field-meta.xml
<CustomField>
    <fullName>VM_Activation_Code__c</fullName>
    <description>Activation</description>
    <inlineHelpText>Activation code from System Engineering which assigns a MAC to this VM</inlineHelpText>
    <label>VE Activation Code</label>
    <length>23</length>
    <type>Text</type>
</CustomField>