Doc/force-app/main/default/objects/Order_Header__c/fields/VM_MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>VM_MAC_Address__c</fullName>
    <inlineHelpText>MAC Address generated from VM Activation Code</inlineHelpText>
    <label>VE MAC Address</label>
    <length>17</length>
    <type>Text</type>
</CustomField>