Doc/force-app/main/default/objects/Order_Header__c/fields/VM_Media_Version__c.field-meta.xml
<CustomField>
    <fullName>VM_Media_Version__c</fullName>
    <inlineHelpText>Version of Appliance software initially shipped on media</inlineHelpText>
    <label>VE Media Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>