Doc/force-app/main/default/objects/Order_Header__c/recordTypes/ApplianceHardware.recordType-meta.xml
<RecordType>
    <fullName>ApplianceHardware</fullName>
    <active>false</active>
    <description>Integrated shipping from AMAX or from IntApp office</description>
    <label>Appliance Hardware</label>
</RecordType>