Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Cloud_Tenant.recordType-meta.xml
<RecordType>
    <fullName>Cloud_Tenant</fullName>
    <active>false</active>
    <label>Cloud Tenant</label>
</RecordType>