Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>false</active>
    <description>Testing only</description>
    <label>Development</label>
</RecordType>