Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Evaluation</fullName>
    <active>false</active>
    <description>Orders for evaluation services</description>
    <label>Evaluation</label>
</RecordType>