Doc/force-app/main/default/objects/Order_Header__c/recordTypes/FreeS4Upgrade2006customer.recordType-meta.xml
<RecordType>
    <fullName>FreeS4Upgrade2006customer</fullName>
    <active>false</active>
    <description>This record type represents orders that are a result of the free S4 upgrade program for 2006  customers</description>
    <label>Free S4 Upgrade (2006 customer)</label>
</RecordType>