Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>false</active>
    <description>Orders for all other non purchase or non RMA shipments</description>
    <label>Other</label>
</RecordType>