Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>false</active>
    <description>This record type represents an appliance order for a partner</description>
    <label>Partner</label>
</RecordType>