Doc/force-app/main/default/objects/Order_Header__c/recordTypes/RMA.recordType-meta.xml
<RecordType>
    <fullName>RMA</fullName>
    <active>false</active>
    <label>RMA</label>
</RecordType>