Doc/force-app/main/default/objects/Order_Header__c/recordTypes/Virtual_Edition_Media.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Edition_Media</fullName>
    <active>true</active>
    <description>This record type represents media delivered on DVD by download</description>
    <label>Virtual Edition - Media</label>
</RecordType>