Doc/force-app/main/default/objects/Order_Header__c/recordTypes/VirtualEditionKey.recordType-meta.xml
<RecordType>
    <fullName>VirtualEditionKey</fullName>
    <active>true</active>
    <description>Virtual Edition activation key</description>
    <label>Virtual Edition - Key</label>
</RecordType>