Doc/force-app/main/default/objects/Order_Header__c/listViews/Open_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Orders</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Tech_Contact__c</columns>
    <columns>Order_System_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Ship_Date__c</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_System_Status__c</field>
        <operation>notEqual</operation>
        <value>Finished</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Hold</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Relationship</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order_Header__c.Virtual_Edition_Media</value>
    </filters>
    <label>Open Relationship Orders</label>
    <language>en_US</language>
    <sharedTo>
        <group>Support_Managers</group>
    </sharedTo>
</ListView>