Doc/force-app/main/default/objects/Order_Header__c/listViews/Open_Orders_Oneplace.listView-meta.xml
<ListView>
    <fullName>Open_Orders_Oneplace</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Shipping_Postal_Code__c</columns>
    <columns>Appliance_Serial_Number__c</columns>
    <columns>Order_System_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_System_Status__c</field>
        <operation>notEqual</operation>
        <value>Finished</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Hold</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Oneplace</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>notContain</operation>
        <value>Experience,Pricing</value>
    </filters>
    <label>Open Orders Oneplace</label>
    <language>en_US</language>
</ListView>