Doc/force-app/main/default/objects/Order_Header__c/listViews/OpenOrders.listView-meta.xml
<ListView>
    <fullName>OpenOrders</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Tech_Contact__c</columns>
    <columns>Order_System_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Ship_Date__c</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_System_Status__c</field>
        <operation>notEqual</operation>
        <value>Finished</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Hold</value>
    </filters>
    <label>Open Orders</label>
    <language>en_US</language>
</ListView>