Doc/force-app/main/default/objects/Order_Header__c/listViews/OrdersInProcess.listView-meta.xml
<ListView>
    <fullName>OrdersInProcess</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Requested_Ship_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Order_System_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_System_Status__c</field>
        <operation>notEqual</operation>
        <value>Error,Finished</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Orders: In Process</label>
    <language>en_US</language>
</ListView>