Doc/force-app/main/default/objects/Order_Header__c/listViews/OrdersOther.listView-meta.xml
<ListView>
    <fullName>OrdersOther</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>OrderStage__c</columns>
    <columns>Order_System_Status__c</columns>
    <columns>Shipping_Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order_Header__c.Other</value>
    </filters>
    <label>Orders: Other</label>
</ListView>