Doc/force-app/main/default/objects/Order_Header__c/listViews/Time_Builder_Related_Order_Headers.listView-meta.xml
<ListView>
    <fullName>Time_Builder_Related_Order_Headers</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Actual_Delivery_Date__c</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>Appliance_Serial_Number__c</columns>
    <columns>Tech_Contact__c</columns>
    <columns>Contract__c</columns>
    <columns>Contract_Product_Component__c</columns>
    <columns>Description__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Order_System_Status__c</columns>
    <columns>Product_Component__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>tb</value>
    </filters>
    <label>Time Builder Related Order Headers</label>
</ListView>